# engine-take-three

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp  tests.cpp
src/bases/: draw.hpp  msg.hpp  obj.cpp  obj.hpp  pos.cpp  pos.hpp
src/iface/: istream.hpp  obj.cpp  obj.hpp
src/math/: color.hpp  vec.hpp  xfm.hpp
src/os/: args.cpp  args.hpp  filestream.cpp  filestream.hpp
src/rnd/: mesh.cpp  mesh.hpp  rend.cpp  rend.hpp  tex.cpp  tex.hpp  utl.hpp
